--- a/7.clickhouse-operator-subscription.yaml
+++ b/7.clickhouse-operator-subscription.yaml
@@ -2,11 +2,19 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: clickhouse-operator-subscription
+
+# So far looks like Subscription is expected to ber in the namespace where operator is expected
 #  namespace: default
   namespace: marketplace
 spec:
-  channel: latest
+  # Specify package name to look for in 'kind: OperatorSource'
   name: clickhouse-operator
+  # Specify channel in this package
+  channel: latest
+
+  # Specify the name of 'kind: OperatorSource' created earlier.
+  # Recommended name is "${QUAY_NAMESPACE}-operators"
   source: sunsingerus-operators
+  # Specify namespace where 'kind: OperatorSource' created earlier is located
   sourceNamespace: marketplace
 
