enhance pre-publish tests

--- a/7.clickhouse-operator-subscription-all-ns.yaml
+++ b/7.clickhouse-operator-subscription-all-ns.yaml
@@ -8,7 +8,7 @@ metadata:
   namespace: operators
 spec:
   # Specify package name to look for in 'kind: OperatorSource' object
-  name: clickhouse-operator
+  name: clickhouse
 
   # Specify channel in this package to track
   channel: latest
